--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 }*/
 footer {
   /*background-color: rgba(0,0,0,0.87);*/
+  position: absolute;
   height: 30px;
   margin-top: 16px;
 
@@ -26,13 +27,19 @@ footer {
 }
 #header {
   background-color: #4267b2;
+  height: 15px;
   color: white;
 }
 #header .white-text {
   color: white ;
 }
+img {
+  height: 24px;
+  width: 24px;
+  margin-top: 13px;
+}
 #header ul .glyphicon {
-  font-size: 20px;
+  font-size: 15px;
   /*color: orange;*/
 }
 .list-heading{
