--- a/main.css
+++ b/main.css
@@ -23,11 +23,16 @@ footer {
 #menu,
 #sidebar {
   background-color: #e9ebee;
+  margin-top :  50px;
 }
 #header {
   background-color: #4267b2;
   height: 41px;
   color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right : 0;
 }
 #header .white-text {
   color: white ;
